Fixed menu overflow issue

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,10 @@
 // Colors
 $green: #9ded92;
 
+// Body
+$body-overflow-x: initial;
+$body-overflow-y: initial;
+
 // Navbar
 $navbar-item-img-max-height: 3rem;
 $navbar-height: 4rem;
